# kadas-ai-integration

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
compute/: Cargo.toml
compute/src/: lib.rs
docs/: quick-configuration-guide.md  quickstarter_plugin-kadas-ai.md
examples/: claude_desktop_config.json
mcp/: README.md
mcp/kadas-mcp-core/: README.md  pyproject.toml
mcp/kadas-mcp-core/src/kadas_mcp_core/: __init__.py  base_server.py  errors.py  registry.py  types.py  validation.py
mcp/servers/analysis-server/: README.md  pyproject.toml
mcp/servers/analysis-server/src/analysis_server/: __init__.py  server.py  state.py  tools.py
mcp/servers/geoai-server/: README.md  pyproject.toml
mcp/servers/geoai-server/src/geoai_server/: __init__.py  server.py  state.py  tools.py
mcp/servers/geodata-server/: README.md  pyproject.toml
mcp/servers/geodata-server/src/geodata_server/: __init__.py  http.py  server.py  tools.py
mcp/servers/geolocation-server/: README.md  pyproject.toml
mcp/servers/geolocation-server/src/geolocation_server/: __init__.py  http.py  server.py  tools.py
mcp/servers/map-server/: README.md  pyproject.toml
mcp/servers/map-server/src/map_server/: __init__.py  server.py  state.py  tools.py
mcp/servers/sketching-server/: README.md  pyproject.toml
mcp/servers/sketching-server/src/sketching_server/: __init__.py  server.py  state.py  tools.py
skills/kadas-geospatial/: SKILL.md
tests/: test_geodata_tools.py  test_mcp_core.py  test_mcp_servers.py
